fixing iframe on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -124,7 +124,7 @@
    top: 0;
    height: 100%;
    overflow: auto;
-   -webkit-overflow-scrolling:touch
+   -webkit-overflow-scrolling:touch;
    @include media-query($on-palm) {
      padding: 20px;
    }
